# newsroom

./: .gitignore  Cargo.toml  LICENSE  README.md  app.rs  main.rs  newsroomstate.rs  ui.rs
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
resources/: newsroom.tape
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  root.rs  settings.rs  tabs.rs  tui.rs  ui.rs
src/app/: mod.rs
src/app/newsroomcore/: datasources.rs  mod.rs  newsarticle.rs  newsfetchrss.rs  newsroomstate.rs  utils.rs
src/newsroomcore/: datasources.rs  newsarticle.rs  newsfetchrss.rs  newsroomstate.rs
src/tabs/: news.rs  settings.rs
