[package]
name = "newsroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
crossterm = "0.26.1"
rand = "0.8.5"
tui = { package = "ratatui", version = ">=0.23.0", features = ["all-widgets"]}
url = "2.3.1"
rss = "2.0.4"
reqwest = "0.11.18"
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
log = "0.4.20"
simple-logging = "2.0.2"
webbrowser = "0.8.12"

#[[bin]]
#name = "newsroom"
#path = "main.rs"
