[package]
name = "newsroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"
crossterm = "0.26.1"
rand = "0.8.5"

tui = { package = "ratatui", version = "=0.24.0", features = ["all-widgets"]}
url = "2.3.1"
rss = "2.0.4"
reqwest = "0.11.18"
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
log = "0.4.20"
simple-logging = "2.0.2"
webbrowser = "0.8.12"
itertools = "0.11.0"
throbber-widgets-tui = "0.2.0"
toml = "0.8.5"
serde = "1.0.190"
textwrap = "0.16.0"
